--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-#root{
+#root {
   height: 100vh;
   font-family: "Open Sans", system-ui;
-  background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+  background: rgb(10, 10, 10);
+}
+.overflow-auto {
+  scrollbar-width: thin;
+  scrollbar-color: black;
 }
 .category-container,
-.voting-container,
-.success-modal{
-background: rgba(255, 255, 255, 0.05);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid hsla(186, 91%, 54%, 0.251);
+.voting-container {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid #d0a351;
 }
