--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,11 @@
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid #d0a351;
 }
+.loader {
+  width: 60px;
+  aspect-ratio: 4;
+  background: radial-gradient(circle closest-side,#c9782a 90%,#0000) 0/calc(100%/3) 100% space;
+  clip-path: inset(0 100% 0 0);
+  animation: l1 1s steps(4) infinite;
+}
+@keyframes l1 {to{clip-path: inset(0 -34% 0 0)}}
